# service_database_application/DatabaseServices/bin/Release/net5.0/swagger.json
@@ -466,6 +466,10 @@
         "procedureDate": {
           "format": "date-time",
           "type": "string"
+        },
+        "procedureID": {
+          "format": "int32",
+          "type": "integer"
         }
       }
     },
